--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -2,6 +2,7 @@
   font-size: 18px;
   margin-bottom: -20px;
   background-image: url(../../images/background.jpg);
+  overflow: hidden;
 }
 
 img {
