--- a/src/components/intro/intro.styles.scss
+++ b/src/components/intro/intro.styles.scss
@@ -4,6 +4,7 @@
   height: 100%;
   padding: 0 5rem;
   padding-bottom: 5rem;
+  overflow: hidden;
 
   @media only screen and (max-width: 768px) {
     padding: 0 3.5rem;
