--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #252626;
+  overflow-x: hidden;
 }
 
 h2 {
